crates/analyzer/tests/snapshots/errors__ctx_missing_load.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"

---
error: type mismatch
  ┌─ compile_errors/ctx_missing_load.fe:9:13
  │
9 │         Foo(0)
  │             ^ this has type `u256`; expected type `address`


